; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-exynos/extr_firmware.c_exynos_l2_configure.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-exynos/extr_firmware.c_exynos_l2_configure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l2x0_regs = type { i32, i32, i32, i32, i32 }

@SMC_CMD_L2X0SETUP1 = common dso_local global i32 0, align 4
@SMC_CMD_L2X0SETUP2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.l2x0_regs*)* @exynos_l2_configure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exynos_l2_configure(%struct.l2x0_regs* %0) #0 {
  %2 = alloca %struct.l2x0_regs*, align 8
  store %struct.l2x0_regs* %0, %struct.l2x0_regs** %2, align 8
  %3 = load i32, i32* @SMC_CMD_L2X0SETUP1, align 4
  %4 = load %struct.l2x0_regs*, %struct.l2x0_regs** %2, align 8
  %5 = getelementptr inbounds %struct.l2x0_regs, %struct.l2x0_regs* %4, i32 0, i32 4
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.l2x0_regs*, %struct.l2x0_regs** %2, align 8
  %8 = getelementptr inbounds %struct.l2x0_regs, %struct.l2x0_regs* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.l2x0_regs*, %struct.l2x0_regs** %2, align 8
  %11 = getelementptr inbounds %struct.l2x0_regs, %struct.l2x0_regs* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @exynos_smc(i32 %3, i32 %6, i32 %9, i32 %12)
  %14 = load i32, i32* @SMC_CMD_L2X0SETUP2, align 4
  %15 = load %struct.l2x0_regs*, %struct.l2x0_regs** %2, align 8
  %16 = getelementptr inbounds %struct.l2x0_regs, %struct.l2x0_regs* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.l2x0_regs*, %struct.l2x0_regs** %2, align 8
  %19 = getelementptr inbounds %struct.l2x0_regs, %struct.l2x0_regs* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @exynos_smc(i32 %14, i32 %17, i32 %20, i32 0)
  ret void
}

declare dso_local i32 @exynos_smc(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
